--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,7 @@ dependencies {
 
     implementation 'com.github.amarjain07:StickyScrollView:1.0.3'
 
+
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 }
